--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 
 # ---------------------------------------------------------------------  FOLDERS
 # ------------------------------------------------------------------------ FILES
+# Ignore the Sublime's project workspace file.
+*.sublime-workspace
